--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,11 @@ footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
-
+div {
+  height: 200px;
+  width: 50%;
+  background-color: powderblue;
+}
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
