--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
+div.container {
+  max-width: 600px;
+}
+div.crossword {
+  height: 600px;
+  width: 600px;
+}
+
 a {
     font-size: 0.6em;
     text-decoration: none;
@@ -33,11 +42,7 @@ footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
-div {
-  height: 200px;
-  width: 50%;
-  background-color: powderblue;
-}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
