--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,14 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
@@ -16,9 +18,10 @@ nav ul li, footer ul li {
 div.container {
   max-width: 681px;
 }
+
 div.crossword {
-  height: 681px;
-  width: 481px;
+  max-width: 681px;
+  max-height: 481px;
 }
 
 a {
